/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.deviceinfo;

option java_package = "com.google.devtools.deviceinfra.api.deviceinfo.proto";
option java_outer_classname = "DeviceLocatorProto";

message DeviceLocator {
  // REQUIRED
  // The uuid of the devices.
  string device_uuid = 1;

  // REQUIRED
  // The host name of the lab the device connects to.
  string host_name = 2;

  // A list of services available on the host, including ADB serial number for
  // the AndroidDeviceService or forwarded port name for the registered ports.
  repeated HostServiceInfo host_service_info = 3;
}

/** The device locator list. */
message DeviceLocators {
  repeated DeviceLocator device_locator = 1;
}

// Information about a single host service.
message HostServiceInfo {
  oneof service {
    AdbServiceInfo adb_service = 1;
    PortServiceInfo port_service = 2;
  }
}

message AdbServiceInfo {
  // Device ID used to connect to the AndroidDeviceService on the host.
  // See google3/cloud/test/device/remote/service/adb_service.proto for details.
  // Device ID must be specified in the DEVICE_ID metadata key.
  // eg. “localhost:6520” or “emulator-123”
  string device_id = 1;
}

message PortServiceInfo {
  // Port exposed by the host.
  // See google3/cloud/test/device/remote/service/port_service.proto for
  // details.
  // eg. ‘waterfall’ etc
  string port_name = 1;
}
